--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       </p>
       
       <div class="flex justify-center">
-        <a href="/public/install.html" class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">
+        <a href="/install.html" class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">
           Zur manuellen Installation
         </a>
       </div>
